--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,7 @@
-FROM openjdk:6 
-
-EXPOSE 8080
-
-ADD target/docker-0.0.1-SNAPSHOT.jar docker-0.0.1-SNAPSHOT.jar  
-
-ENTRYPOINT ["java", "-jar", "/docker-0.0.1-SNAPSHOT.jar"]
+FROM openjdk:17
+ 
+EXPOSE 8080  
+ 
+ADD target/IplFantasyLeague-0.0.1-SNAPSHOT.jar app.jar
+ 
+ENTRYPOINT ["java", "-jar", "app.jar"]
