--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fantasyleaguedb
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.username=postgres
-spring.datasource.password=Quaza@999
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl.auto=create
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 message1=Invalid Credentials
 message2=Match already started
 message3=Team does not exist
@@ -16,23 +17,13 @@ message9=User Already Exist
 message10=User Not Found
 message11=Bid Not Found
 message12=Match Already Exists
-message13=Match Not Started
-
-#Loggers
+message13=Match Not Started #Loggers
 logging.level.com.capg = TRACE
-logging.level.com.capg.ipl.controller=INFO
-
-#Logging pattern for the console
-logging.pattern.console = %d{yyyy-MMM-dd HH:mm:ss a} [%t] %-5level %logger{36} -%msg%n
-
-#Logging patter for the file
-logging.pattern.file = %d{yyyy-MM-dd} [%thread] %-5level %logger{36} %msg%n
-
-#Logging file
+logging.level.com.capg.ipl.controller=INFO #Logging pattern for the console
+logging.pattern.console = %d{yyyy-MMM-dd HH:mm:ss a} [%t] %-5level %logger{36} -%msg%n #Logging patter for the file
+logging.pattern.file = %d{yyyy-MM-dd} [%thread] %-5level %logger{36} %msg%n #Logging file
 logging.file.name = logs/Error.log
-#logging.file.path = logs/Error.log
-
-SUCCESS = Logged in successfully
-username = sharfunnisa
-password = pass@123
+#logging.file.path = logs/Error.log SUCCESS = Logged in successfully
+username = SankariK
+password = Sank@1811
 app.message = Reading this message
